hw3-1/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-check-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: health-check-app
