hw3-1/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: health-check-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
          - pathType: Prefix
            path: /otusapp/mrilina/*
            backend:
              service:
                name: health-check-service
                port:
                  number: 80
